manager the lifespan of the icon dialog to match that of the activity icon

BUG:288788